--- a/HungerMouth/Base.lproj/LaunchScreen.storyboard
+++ b/HungerMouth/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +15,30 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="r3" translatesAutoresizingMaskIntoConstraints="NO" id="XM3-ed-M4n">
+                                <rect key="frame" x="163" y="208" width="274" height="184"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HUNGER MOUTH" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MTp-Vs-gS2">
+                                <rect key="frame" x="163" y="154" width="274" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="I9b-VP-Nhw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.51372549020000002" green="0.5450980392" blue="0.78039215689999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="XM3-ed-M4n" firstAttribute="top" secondItem="MTp-Vs-gS2" secondAttribute="bottom" constant="33" id="2t1-aK-Mmh"/>
+                            <constraint firstItem="MTp-Vs-gS2" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="134" id="F3Z-2i-cMU"/>
+                            <constraint firstItem="MTp-Vs-gS2" firstAttribute="leading" secondItem="XM3-ed-M4n" secondAttribute="leading" id="eiU-tg-FLo"/>
+                            <constraint firstItem="MTp-Vs-gS2" firstAttribute="trailing" secondItem="XM3-ed-M4n" secondAttribute="trailing" id="iep-Rp-1X6"/>
+                            <constraint firstItem="XM3-ed-M4n" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ikE-rm-tJ1"/>
+                            <constraint firstItem="XM3-ed-M4n" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="rBs-Xh-7zH"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +46,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="r3" width="274" height="184"/>
+    </resources>
 </document>
